--- a/GD.qmd
+++ b/GD.qmd
@@ -225,3 +225,14 @@ $$\frac{\partial}{\partial\theta_j}J(\theta) = \frac{1}{m}\sum^m_{i=1}(h_\theta(
 E portanto, substituindo na formula da atualização, temos a seguinte regra:
 
 $$\theta_j \leftarrow \theta_j - \alpha \frac{1}{m}\sum^m_{i=1}(h_\theta(x^{(i)})-y^{(i)})x^{(i)}_j$$
+
+# Lista das Principais Funções de Custo
+
+Alem das funções de custo ja listadas, outras são definidas para determinados nichos e obejtivos. O seguinte tópico buscou listar as principais.
+
+
+## Função de Custo Exponencial
+
+Utilizada para o algoritmo AdaBoost de classsificação, onde sua forma de convexidade e crescimento exponencial para valroes negativos a torna sensivel para valores outliers. Dada por
+
+$$f(x) = \frac{1}{2}log(\frac{p(1|x)}{1-p(1|x)})$$
