--- a/neuron.qmd
+++ b/neuron.qmd
@@ -237,49 +237,145 @@ Em conjunto eles, temos a seguinte sequencia
 
 ## Exemplo
 
-O seguinte exemplo foi construido, simulando o treinamento de uma rede via gradiente descendente e backpropagation
+O exemplo a seguir foi desenvolvido para ilustrar o treinamento de uma rede neural utilizando os algoritmos de Gradiente Descendente e Backpropagation.
 
-Com os seguintes 
+O problema abordado é do tipo regressão, com o objetivo de prever um valor numérico. A estrutura da rede foi definida da seguinte maneira: a camada de entrada possui 3 features, a camada oculta contém 2 neurônios, e a camada de saída é composta por 1 neurônio, responsável por gerar a predição final.
 
-Net - Total de entrada de um neuronio
-
-Out - Total de sáida de um neuronio
-
-w_i_k - peso relacionado a saída e entrada k
+A função de ativação utilizada é a **ReLU** com a função de custo **Erro Quadrático Médio**
 
 
+Para facilitar os calculos, utilizaremos a seguinte nomenclatura para um neuronio
+
+![](images/example_ft4.png)
+
+O funcionamento de um neurônio pode ser dividido em duas etapas principais. A primeira etapa corresponde à **soma ponderada dos valores de entrada**, calculada como $Net = \sum_{i=1}^Ix_iw_i$, onde $x_i$ são os valores da entrada e $w_i$ os respectivos pesos, e **Net** representa o resultado dessa operação
+
+A segunda etapa consiste na **aplicação da função de ativação** ao valor retornado por Net, gerando a saída do neurônio. Esse processo é expresso como $Out = Fa(Net) + Bias$, onde $Fa$ é a função de ativação escolhida e o termo Bias ajusta o resultado final
 
 
+Essa separação entre as etapas de cálculo da soma ponderada (Net) e a aplicação da função de ativação (Out) é crucial para a aplicação da regra da cadeia durante o cálculo dos gradientes na etapa de backpropagation.
 
-Dado uma rede com 3 inputs,  1 camada oculta possuindo 2 neuronios e 1 neuronio na camada de saída, com função de ativação sigmoide e uma função de custo EQM
-
+Conceitualmente, a rede possui a seguinte arquitetura
 
 ![](images/example_ft1.png)
-É importante ressaltar a nomenclatura utilizada, $i$ refere-se a os inputs, $h$ aos neurônios na camada oculta e $o$ ao neurônio na camada de saída. Para os pesos, de forma generalizada um $w_{xyz}$ representa um peso atrelado x-ésimo neuronio de uma camada anterior, ao y-ésimo neurônio z-ésima camada
+É importante ressaltar a nomenclatura utilizada, $i$ refere-se a os inputs, $h$ aos neurônios na camada oculta e $o$ ao neurônio na camada de saída. Para os pesos, de forma generalizada um $w_{xyz}$ representa um peso atrelado x-ésimo neuronio de uma camada anterior, ao y-ésimo neurônio z-ésima camada, onde a rede possui um número de camadas indo de 0 (camada de entrada) a L (camada oculta). Por exemplo, um peso $w_212$ representa um peso que liga o  segundo neuronio da camada 1 ao primeiro neuronio da camada 2.
 
 ## Definindo os Valores
 
+Para o exemplo, 
+
 ![](images/example_ft2.png)
+
+O valor verdadeiro é **11**
+
 
 ![](images/example_ft3.png)
 
-### Forward Pass
+## Forward Pass
 
 
-Para começar, precisamos da predição inicial da rede dado os pesos e vieses aleatórios de inicialização
+Para começar, precisamos da predição inicial da rede dado os pesos e vieses aleatórios de inicialização.
+
+1. Camada Oculta
+
+O primeiro passo é calcular os valores passados para a camada oculta, calculando os valores de Net e Out
+
+Para $h_1$ temos
+
+$$Net_{h_1} = i_1w_{111} + i_2w_{211} + i_3w_{311}$$
+$$Net_{h_1} = 3*0.5 + 9*0.6 + 21*0.4 = 15.5$$
+$$Out_{h_1} = Fa(Net_{h_1}) + Bias_1$$
+$$Out_{h_1} = max(0;15.5) + 0.5 = 16$$
+
+Repetindo os mesmos passos para $h_2$
+
+$$Net_{h_2} = i_1w_{121} + i_2w_{221} + i_3w_{321}$$
+$$Net_{h_2} = 3*0.7 + 9*0.5 + 21*0.6 = 19.2$$
+$$Out_{h_2} = Fa(Net_{h_2}) + Bias_1$$
+$$Out_{h_2} = max(0;19.2) + 0.5 = 19.7$$
+
+Com valores de $h_1$ e $h_2$ calculados, podemos calcular o valor de $o_1$
+
+$$Net_{o_1} = h_1w_{112} + h_2w_{212}$$
+$$Net_{o_1} = 16 * 0.4 + 19.7 * 0.9 = 24.1$$
+$$Out_{o_1} = Fa(Net_{o_1}) + Bias_2$$
+$$Out_{o_1} = max(0;24.1) + 0.3 = 24.4$$
+
+## Calculando o Erro Total
+
+Com o valor predito pelo modelo, podemos calcular o Erro, lembrando que o valor verdadeiro é **11**. Para o erro, a função de custo utilizada é o **Erro Quadrático Médio**, dado por
+
+$$E_{total} = \sum\frac{1}{2}(y-\hat y)^2$$
+
+::: {.callout-tip}
+## Dica
+
+O $\frac{1}{2}$ é incluido para que o expoente seja cancelado durante o calculado da derivada.
+:::
 
 
+Assim, temos o seguinte erro
+
+$$E_{total} = \frac{1}{2}(11-24.4)^2 = 89.8$$
+
+## The Backwards Pass
+
+O objetivo do backpropagation é utilizar o erro calculado na saída da rede para ajustar os valores dos pesos e vieses de maneira eficiente. Esse ajuste é feito iterativamente, com o intuito de minimizar o erro ao longo do processo de treinamento, levando a uma melhoria contínua no desempenho da rede. Em essência, o backpropagation aplica a regra da cadeia para propagar o erro da camada de saída até as camadas iniciais, identificando como cada peso e viés contribui para o erro, e, em seguida, atualizando esses parâmetros para reduzir gradativamente o valor do erro.
+
+Para a atualização dos valores dos pesos e vieses, utilizamos o seguinte método:
 
 
-### Calculando o Erro Total
+Para atualizar o valor de um certo peso, devemos calcular sua constribuição para o erro do total da rede. Por exemplo, se estamos trabalhando com o peso $w_{112}$, sua contribuição é dado pela seguinte derivada
+
+$$\frac{\partial E_{total}}{\partial w_{112}}$$
+
+O cálculo dessa derivada é realizada através da regra da cadeia
 
 
-### Backward Pass
+$$\frac{\partial E_{total}}{\partial w_{112}} =
+\frac{\partial E_{total}}{\partial out_{o_{1}}}
+\times 
+\frac{\partial out_{o_{1}}}{\partial net_{o_{1}}} 
+\times
+\frac{\partial net_{o_{1}}}{\partial w_{112}}$$
 
-!. Camada de Saída
+Para o cálculo dessas derivadas, devemos antes definir claramente cada função.
 
-2. Camada Oculta
+* $E_{total}$
+  - É a função de custo definida para cada rede. No exemplo estudado, a função de custo definida foi o **EQM**, dada por
+  $E_{total} = \sum\frac{1}{2}(y-\hat y)^2 = \sum\frac{1}{2}(y-out_{o_1})^2$
+  
+* $Out_{o}$
+  - A função **Out** de um determinado neurônio  são os valores retornado por **Net** aplicado na função de ativação, dado por
+$Out_{} = Fa(Net) + Bias$
+  - Para o exemplo, $Out_{o_1} = ReLU(Net_{o_1}) + Bias_2$
+  
+* $Net_{o}$
+  - A função **Net** é etapa da soma ponderada, onde os valores 
+  - Para o exemplo,  $Net_{o_1} = Out_{h_1}w_{112} + Out_{h_2}w_{212}$
+  
+Com cada função devidamente definida, podemos calcular as derivadas parciais
 
+$$\frac{\partial E_{total}}{\partial out_{o_{1}}}= -(y-out_{o_1})$$
 
+$$\frac{\partial out_{o_{1}}}{\partial net_{o_{1}}} = \begin{cases} 
+0 & \text{se } net_{o_1} < 0, \\
+1 & \text{se } net_{o_1} > 0.
+\end{cases}$$
 
+$$\frac{\partial net_{o_{1}}}{\partial w_{112}} = Out_{h_1}$$
 
+Assim 
+
+$$\frac{\partial E_{total}}{\partial w_{112}} = -(y-out_{o_1}) \times \begin{cases} 
+0 & \text{se } net_{o_1} < 0, \\
+1 & \text{se } net_{o_1} > 0
+\end{cases} \times Out_{h_1}  = -(11 - 24.4) \times 1 \times 16 = 214.4$$
+
+Com o valor calculado, podemos finalmente atualizar o valor de $w_{112}$. A atualização é dada por
+
+$$w_{112}^+ = w_{112} - \frac{\partial E_{total}}{\partial w_{112}} = 0.4 - 214.4 = -214$$
+
+Veremos mais pra frente o conceito de tunagem de hiperparametros, onde um deles é a taxa de aprendizado (*learning rate*), esse parametro é utilizado para ajustar a magnitude do valor atualizado por iteração. Utilizando ele, a atualização é dada por 
+$$w_{112}^+ = w_{112} - \alpha \frac{\partial E_{total}}{\partial w_{112}}$$
+onde $\alpha$ é um valor que deve ser tunado (processo semelhante a otimização)
